WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269782
[GStreamer] Fix audio sink detection in custom platforms
https://bugs.webkit.org/show_bug.cgi?id=269782
Summary
[GStreamer] Fix audio sink detection in custom platforms
Xabier Rodríguez Calvar
Reported
2024-02-20 03:24:20 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2024-02-20 03:31:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24807
EWS
Comment 2
2024-02-20 05:49:46 PST
Committed
275037@main
(3ab7997af7e5): <
https://commits.webkit.org/275037@main
> Reviewed commits have been landed. Closing PR #24807 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-20 05:50:15 PST
<
rdar://problem/123308333
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug