[GStreamer] Fix audio sink detection in custom platforms https://bugs.webkit.org/show_bug.cgi?id=269782

Reviewed by Philippe Normand.

Sometimes we can get a message from a new audio sink that we should store as such even when we already have one.

Based on a patch by Pawel Lampe <pawel.lampe@gmail.com>.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/275037@main